fix installer
